network-policy/lab1-block-pod/target-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: target-pod
  labels:
    app: target
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
